Avoiding header text truncation

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,9 @@ img.step {
 	width:100%;
 	border:3px solid black;
 }
+
+// Avoid header text truncation
+.ui-header, .ui-title, .ui-footer {
+	margin-right: 0 !important;
+	margin-left: 0 !important;
+}
